@@ -72,7 +72,7 @@ append_extraInfo <- function(df, object) {
             res <- merge(df, info, by.x="node", by.y="node")
         }
     } else {
-        res <- df
+        return(df)
     }
 
     i <- order(res$node, decreasing = FALSE)
@@ -392,7 +392,12 @@ is.tree_attribute_ <- function(p, var) {
 }
 
 `%add2%` <- function(d1, d2) {
-    dd <- merge(d1, d2, by.x="label", by.y=1, all.x=TRUE)
+    d2[,1] <- as.character(d2[,1])
+    if ("node" %in% colnames(d2)) {
+        dd <- merge(d1, d2, by.x="node", by.y="node", all.x=TRUE)
+    } else {
+        dd <- merge(d1, d2, by.x="label", by.y=1, all.x=TRUE)
+    }
     dd <- dd[match(d1$node, dd$node),]
     return(dd)
 }
